# SaidouEngineCore

./: .gitignore  CMakeLists.txt  README.md
assets/: Default.mat  Ground.mat  NewMaterial.mat
assets/shaders/: basic.frag  basic.vert  skybox.frag  skybox.vert
include/Core/: Scene.h
include/Engine/: DefaultImGuiLayout.h  Engine.h  Launcher.h  Material.h  MaterialManager.h  Mesh.h  MeshFactory.h  Paths.h  RenderSystem.h  Renderer.h  ScriptManager.h  Shader.h  Skybox.h  TextureCube.h
include/Engine/Utilities/: CameraOrbit.h
include/Input/: InputEvent.h  InputManager.h
include/Objects/: BoxCollider.h  CameraComponent.h  Component.h  DirectionnalLightComponent.h  GameObject.h  MeshFilter.h  MeshRenderer.h  ScriptComponent.h  TransformComponent.h
include/UI/: DockspaceWindow.h  GameWindow.h  HierarchyWindow.h  IUIWindow.h  InspectorWindow.h  ProjectWindow.h  SceneUI.h  SceneWindow.h
include/UI/Tools/: ContextMenu.h  IconManager.h  ImGuizmo.h  MenuBarUI.h  TextureLoader.h
src/: main.cpp
src/Engine/: Engine.cpp  Launcher.cpp  Mesh.cpp  MeshFactory.cpp  Paths.cpp  RenderSystem.cpp  Renderer.cpp  Shader.cpp  Skybox.cpp  TextureCube.cpp
src/Input/: InputManager.cpp
src/Objects/: DirectionnalLightComponent.cpp  GameObject.cpp  MeshFilter.cpp  TransformComponent.cpp
src/UI/: DockspaceWindow.cpp  GameWindow.cpp  HierarchyWindow.cpp  InspectorWindow.cpp  ProjectWindow.cpp  SceneWindow.cpp
src/UI/Tools/: ContextMenu.cpp  IconManager.cpp  ImGuizmo.cpp  MenuBarUI.cpp  TextureLoader.cpp
